Fix mission bar height and hide scrollbar on chrome+ff

--- a/public_html/css/large-style.css
+++ b/public_html/css/large-style.css
@@ -53,6 +53,15 @@ only screen and (min-width: 768px)  {
     display: none; 
   }
 
+#head {
+  padding-right: 25px;
+}
+
+#headList {
+  margin-right: -25px;
+  padding-right: 13px;
+}
+
   /* LOADING SCREEN */
   .progress-container {
     margin-top: -125px;
