--- a/public_html/css/mobile-style.css
+++ b/public_html/css/mobile-style.css
@@ -95,7 +95,7 @@ only screen and (max-width: 767px) {
 
   .row-offcanvas-right
   .sidebar-offcanvas {
-    right: -75%;
+    right: -65%;
   }
 
   .row-offcanvas-right.active {
@@ -105,7 +105,7 @@ only screen and (max-width: 767px) {
   .sidebar-offcanvas {
     position: absolute;
     top: 0;
-    width: 75%;
+    width: 65%;
   }
   
   .footer {
